--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
-ROM_URL=https://bigota.d.miui.com/22.8.25/miui_THYMEPRE_22.8.25_fe62365d3f_12.0.zip
-ZIP_NAME=miui_THYMEPRE_22.8.25_fe62365d3f_12.0.zip
+ROM_URL=https://bigota.d.miui.com/V13.1.22.8.22.DEV/miui_STAR_V13.1.22.8.22.DEV_bc73df940a_12.0.zip
+ZIP_NAME=miui_STAR_V13.1.22.8.22.DEV_bc73df940a_12.0.zip
 OS_TYPE=Generic
 BUILD_TYPE=AB
 REPACK_NAME=SGSI.zip
