--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-ROM_URL=https://bigota.d.miui.com/V13.1.22.8.22.DEV/miui_STAR_V13.1.22.8.22.DEV_bc73df940a_12.0.zip
-ZIP_NAME=miui_STAR_V13.1.22.8.22.DEV_bc73df940a_12.0.zip
-OS_TYPE=Generic
+ROM_URL=https://rfk71c85jnrg04oc7hvilfrt2pnho0l43fieun1ro9sj45dtf6vvv095.qc.x.bsgslb.cn:10443/xdispatch78e6b359249f62f7/bigota.d.miui.com/22.9.7/miui_THYMEPRE_22.9.7_bea8fd8392_12.0.zip
+ZIP_NAME=miui_THYMEPRE_22.9.7_bea8fd8392_12.0.zip
+OS_TYPE=miui
 BUILD_TYPE=AB
 REPACK_NAME=SGSI.zip
 VERSION=12
