--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
-ROM_URL=https://rfk71c85jnrg04oc7hvilfrt2pnho0l43fieun1ro9sj45dtf6vvv095.qc.x.bsgslb.cn:10443/xdispatch78e6b359249f62f7/bigota.d.miui.com/22.9.7/miui_THYMEPRE_22.9.7_bea8fd8392_12.0.zip
-ZIP_NAME=miui_THYMEPRE_22.9.7_bea8fd8392_12.0.zip
+ROM_URL=https://q0ln2cvl9ta1hp39mlt488u09ufeev5cikon51p03696rckqv6tvu68b.qc.dolfincdnx.cn:18635/xdispatch78e7c9f36f06ed86/bigota.d.miui.com/V13.1.22.10.24.DEV/miui_THOR_V13.1.22.10.24.DEV_6b4e1850e4_12.0.zip
+ZIP_NAME=miui_THOR_V13.1.22.10.24.DEV_6b4e1850e4_12.0.zip
 OS_TYPE=miui
 BUILD_TYPE=AB
 REPACK_NAME=SGSI.zip
