--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ROM_URL=https://q0ln2cvl9ta1hp39mlt488u09ufeev5cikon51p03696rckqv6tvu68b.qc.dolfincdnx.cn:18635/xdispatch78e7c9f36f06ed86/bigota.d.miui.com/V13.1.22.10.24.DEV/miui_THOR_V13.1.22.10.24.DEV_6b4e1850e4_12.0.zip
 ZIP_NAME=miui_THOR_V13.1.22.10.24.DEV_6b4e1850e4_12.0.zip
-OS_TYPE=miui
+OS_TYPE=MIUI
 BUILD_TYPE=AB
 REPACK_NAME=SGSI.zip
 VERSION=12
