--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
-ROM_URL=https://q0ln2cvl9ta1hp39mlt488u09ufeev5cikon51p03696rckqv6tvu68b.qc.dolfincdnx.cn:18635/xdispatch78e7c9f36f06ed86/bigota.d.miui.com/V13.1.22.10.24.DEV/miui_THOR_V13.1.22.10.24.DEV_6b4e1850e4_12.0.zip
-ZIP_NAME=miui_THOR_V13.1.22.10.24.DEV_6b4e1850e4_12.0.zip
+ROM_URL=https://83pv57d141dfv452fsq4vk2igqga1rifjcruhnbv7t7r1o3f3t3vvg0t.qc.dolfincdnx.net:33833/xdispatch78e7c9be78f0523b/bigota.d.miui.com/V14.0.1.0.SJKCNXM/miui_LMI_V14.0.1.0.SJKCNXM_f138ab23ac_12.0.zip
+ZIP_NAME=miui_LMI_V14.0.1.0.SJKCNXM_f138ab23ac_12.0.zip
 OS_TYPE=MIUI
 BUILD_TYPE=AB
 REPACK_NAME=SGSI.zip
