--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-ROM_URL=https://83pv57d141dfv452fsq4vk2igqga1rifjcruhnbv7t7r1o3f3t3vvg0t.qc.dolfincdnx.net:33833/xdispatch78e7c9be78f0523b/bigota.d.miui.com/V14.0.1.0.SJKCNXM/miui_LMI_V14.0.1.0.SJKCNXM_f138ab23ac_12.0.zip
+ROM_URL=https://hugeota.d.miui.com/V14.0.1.0.SJKCNXM/miui_LMI_V14.0.1.0.SJKCNXM_f138ab23ac_12.0.zip
 ZIP_NAME=miui_LMI_V14.0.1.0.SJKCNXM_f138ab23ac_12.0.zip
 OS_TYPE=MIUI
 BUILD_TYPE=AB
